src/snapshots/rlox__parse__tests__rparens.snap
---
source: src/parse.rs
expression: stderr
---
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1);
   │ ──┬──  ┬  
   │   ╰─────── This statement should be terminated with ;
   │        │  
   │        ╰── There should be a ; here
───╯

